--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "build-gh-pages": "vue-tsc && vite build --base='/tailwind-vue-vite/'",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
     "date-fns": "^2.30.0",
     "vue": "^3.3.4"
   },
