--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "build-gh-pages": "vue-tsc && vite build --base='/tailwind-vue-vite/'",
+    "build-gh-pages": "vue-tsc && vite build --base='/discord-ui-tailwind-vue-vite/'",
     "preview": "vite preview"
   },
   "dependencies": {
