--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@types/node": "^20.10.0",
     "date-fns": "^2.30.0",
+    "pinia": "^2.1.7",
     "vue": "^3.3.4"
   },
   "devDependencies": {
