Update Prettier and VSCode settings, add new dependencies and modify Tailwind CSS config

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@types/node": "^20.10.0",
+    "class-variance-authority": "^0.7.0",
     "date-fns": "^2.30.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4"
