--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "bracketSameLine": true,
   "plugins": [
     "prettier-plugin-tailwindcss"
-  ]
+  ],
+  "tailwindFunctions": ["tw", "cva", "clsx"]
 }
