--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@iconify/tailwind": "^0.1.4",
     "@types/node": "^20.10.0",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^2.30.0",
@@ -18,12 +19,15 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/mdi-light": "^1.1.10",
+    "@iconify-json/tabler": "^1.1.105",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
